--- a/presentation/src/main/res/layout/activity_search_user.xml
+++ b/presentation/src/main/res/layout/activity_search_user.xml
@@ -24,7 +24,6 @@
         android:layout_marginStart="@dimen/spacing_20dp"
         android:layout_marginTop="@dimen/spacing_50dp"
         android:layout_marginEnd="@dimen/spacing_20dp"
-        android:background="@drawable/background_edit_text_search"
         android:drawablePadding="@dimen/spacing_20dp"
         android:hint="@string/search_user_hint"
         android:imeOptions="actionSearch"
@@ -43,7 +42,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_28dp"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +53,18 @@
         android:id="@+id/recyclerViewSearch"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/spacing_20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextSearch" />
+
+    <include
+        android:id="@+id/includeSearchError"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="invisible"
+        layout="@layout/partial_search_error"
         android:layout_marginTop="@dimen/spacing_20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
