--- a/presentation/src/main/res/values/dimens.xml
+++ b/presentation/src/main/res/values/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="size_20sp">20sp</dimen>
+
+
     <dimen name="size_80dp">80dp</dimen>
     <dimen name="size_50dp">50dp</dimen>
 
@@ -12,5 +15,5 @@
     <dimen name="spacing_12dp">12dp</dimen>
 
 
-    <dimen name="radius_20dp">20dp</dimen>
+    <dimen name="radius_10dp">10dp</dimen>
 </resources>
